syntax = "proto3";

package example.kt;
option java_package = "example.kt.proto";

service Greeter {
  rpc Hello (HelloRequest) returns (HelloReply) {}
  rpc HelloBlocking (HelloRequest) returns (HelloReply) {}
  rpc HelloError (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string first_name = 1;
  string last_name = 2;
  string message = 3;
}

message HelloReply {
  string message = 1;
}
